--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "lodash": "^4.17.21",
+    "pretty": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.3.0",
-    "@types/jest": "^29.0.0",
-    "jest": "^27.5.1",
+    "@types/jest": "^28.0.0",
+    "jest": "^28.0.2",
+    "jest-environment-jsdom": "^28.0.2",
     "react-scripts": "^5.0.1",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
     "webpack": "^5.74.0",
