Reviews/Changes for Alex

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "src",
     "__tests__/App.test.tsx",
     "babel.config.js",
+    "src/assets/images/gif.d.ts",
+    "src/assets/images/jpg.d.ts",
   ],
   "outDir": "./dist/",
   "noImplicitAny": true,
