--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.0.0",
+    "@types/uuid": "^8.3.4",
     "jest": "^28.0.2",
     "jest-environment-jsdom": "^28.0.2",
     "react-scripts": "^5.0.1",
