--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://conancodes.github.io/symmetrical-guacamole",
   "name": "symmetrical-guacamole",
   "version": "0.1.0",
   "private": true,
@@ -26,6 +27,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.0.0",
     "@types/uuid": "^8.3.4",
+    "gh-pages": "^4.0.0",
     "jest": "^28.0.2",
     "jest-environment-jsdom": "^28.0.2",
     "react-scripts": "^5.0.1",
@@ -37,6 +39,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "jest",
